tests/errors/unsupported-instance-head/errors.snap
---
source: tests/errors.rs
expression: output
---
error[E0115]: Instance head `(int, int)` is not supported.
  │
  ├─𜱶 help: use a concrete type or a generic type constructor.
  │
6 │ implement greet (int, int) {
  │                 ^^^^^^^^^^
  ╰─𜱶 tests/errors/unsupported-instance-head/main.pa:6:17

warning[E0101]: Name `x` is never used.
  │
7 │  def hello = fun x {
  │                  ^
  ╰─𜱶 tests/errors/unsupported-instance-head/main.pa:7:18
